archive/__before_move/old/_very_old/tekton-pipelines/example/07-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: tekton
    component: el-github-pr
  name: tekton-pr
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: ${SECRET_DNS_TARGET}
    hajimari.io/enable: "true"
    hajimari.io/icon: safe
spec:
  tls:
    - secretName: ${SECRET_DOMAIN_CH//./-}-tls
      hosts:
        - hook.${SECRET_DOMAIN_CH}
  rules:
    - host: hook.${SECRET_DOMAIN_CH}
      http:
        paths:
          - path: /hooks
            pathType: Exact
            backend:
              service:
                name: el-github-pr
                port:
                  number: 8080
